--- a/IC.html
+++ b/IC.html
@@ -68,7 +68,6 @@
                 <button class="menu"></button>
                 <div class="nav">
                     <ul>
-                        <li><a href="shop.html">商城</a></li>
                         <li><a href="game.html">Game</a></li>
                         <li><a href="index.html#nft-idx">NFT</a></li>
                         <li><a href="index.html#tutorial">教學</a></li>
@@ -135,71 +134,70 @@
             <ul class="breadcrumb">
                 <li><a href="index.html">首頁</a></li>
                 <li><a href="game.html">Game</a></li>
-                <li>Match the Pirate</li>
+                <li>星際連線</li>
             </ul>
 
             <section id="game">
                 <div class="container">
                     <div class="game-detail card">
                         <div class="card-content">
-                            <div class="game-zone match-the-pirate">
-                                <div class="default"
-                                    style="background-image: url(img/game/match-the-pirate/cover.jpg);">
+                            <div class="game-zone IC">
+                                <div class="default" style="background-image: url(img/game/IC/cover.jpg);">
                                     <div class="game-title">
-                                        <h3>Match the Pirate</h3>
+                                        <h3>星際連線</h3>
                                         <!-- ↓若還沒連結錢包則先跳出連結錢包的彈窗 -->
-                                        <button>Start to play</button>
+                                        <button>開始遊玩</button>
                                     </div>
                                 </div>
 
                                 <div class="play-game">
-                                    <video autoplay muted loop poster="img/game/match-the-pirate/bg.jpg">
-                                        <source src="img/game/match-the-pirate/bg.mp4" type="video/mp4">
+                                    <video autoplay muted loop poster="img/game/IC/bg.jpg">
+                                        <!-- <source src="img/game/IC/bg.mp4" type="video/mp4"> -->
                                     </video>
                                     <div class="game-content">
                                         <div class="result">
-                                            <img src="img/game/match-the-pirate/card.png">
+                                            <div class="swiper">
+                                                <div class="swiper-wrapper">
+                                                    <div class="swiper-slide">
+                                                        <img src="img/game/IC/star.png">
+                                                    </div>
+                                                    <div class="swiper-slide">
+                                                        <img src="img/game/IC/coin.png">
+                                                    </div>
+                                                    <div class="swiper-slide">
+                                                        <img src="img/game/IC/crown.png">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="swiper">
+                                                <div class="swiper-wrapper">
+                                                    <div class="swiper-slide">
+                                                        <img src="img/game/IC/coin.png">
+                                                    </div>
+                                                    <div class="swiper-slide">
+                                                        <img src="img/game/IC/crown.png">
+                                                    </div>
+                                                    <div class="swiper-slide">
+                                                        <img src="img/game/IC/star.png">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="swiper">
+                                                <div class="swiper-wrapper">
+                                                    <div class="swiper-slide">
+                                                        <img src="img/game/IC/crown.png">
+                                                    </div>
+                                                    <div class="swiper-slide">
+                                                        <img src="img/game/IC/star.png">
+                                                    </div>
+                                                    <div class="swiper-slide">
+                                                        <img src="img/game/IC/coin.png">
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
 
                                         <div class="selection">
-                                            <div>
-                                                <input id="dice01" type="radio" name="dice" value="dice01">
-                                                <label for="dice01">
-                                                    <img class="bg" src="img/game/btn-bg.png">
-                                                    <img class="item" src="img/game/match-the-pirate/card1.png">
-                                                </label>
-
-                                                <input id="dice02" type="radio" name="dice" value="dice02">
-                                                <label for="dice02">
-                                                    <img class="bg" src="img/game/btn-bg.png">
-                                                    <img class="item" src="img/game/match-the-pirate/card2.png">
-                                                </label>
-
-                                                <input id="dice03" type="radio" name="dice" value="dice03">
-                                                <label for="dice03">
-                                                    <img class="bg" src="img/game/btn-bg.png">
-                                                    <img class="item" src="img/game/match-the-pirate/card3.png">
-                                                </label>
-
-                                                <input id="dice04" type="radio" name="dice" value="dice04">
-                                                <label for="dice04">
-                                                    <img class="bg" src="img/game/btn-bg.png">
-                                                    <img class="item" src="img/game/match-the-pirate/card4.png">
-                                                </label>
-
-                                                <input id="dice05" type="radio" name="dice" value="dice05">
-                                                <label for="dice05">
-                                                    <img class="bg" src="img/game/btn-bg.png">
-                                                    <img class="item" src="img/game/match-the-pirate/card5.png">
-                                                </label>
-
-                                                <input id="dice06" type="radio" name="dice" value="dice06">
-                                                <label for="dice06">
-                                                    <img class="bg" src="img/game/btn-bg.png">
-                                                    <img class="item" src="img/game/match-the-pirate/card6.png">
-                                                </label>
-                                            </div>
-
                                             <button class="play"><img src="img/game/btn-play.png"></button>
                                         </div>
                                     </div>
@@ -242,17 +240,13 @@
                             </div>
 
                             <div class="content">
-                                <h3>Match the Pirate</h3>
+                                <h3>星際連線</h3>
                                 <div class="desc">
                                     <p>
-                                        This is a probability game involving dice rolling. Should the number on your
-                                        rolled dice match that of the computer's, you will be able to receive the reward
-                                        amount, which is the result of multiplying your wager by the payout odds.
-                                        Conversely, if the number on your rolled dice differs from that of the
-                                        computer's, the system shall seize your wager.
+                                        若飛船遇見的三個星球元素相同，你將獲得賭本乘上賠率的獎勵金額；如果三個星球元素沒有相同，系統將沒收你的賭本。
                                     </p>
                                 </div>
-                                <!-- <div class="awards">
+                                <div class="awards">
                                     <div class="louder"><i class="icon-Loudspeaker"></i></div>
                                     <div class="swiper award-list">
                                         <div class="swiper-wrapper">
@@ -263,18 +257,18 @@
                                             <div class="swiper-slide">"0xe21...rjs14”winning 50 $ZKZ！</div>
                                         </div>
                                     </div>
-                                </div> -->
+                                </div>
                                 <div class="odd-n-bet">
                                     <div class="odds">
                                         <label>
-                                            Odds
+                                            賠率
                                             <i class="icon-InfoCircle popUp--open" for="odds"></i>
                                         </label>
                                         <h3>xN.NN</h3>
                                     </div>
                                     <div class="bets">
-                                        <label for="bets">Bets</label>
-                                        <input name="bets" type="number" placeholder="Enter your Bets" required>
+                                        <label for="bets">賭本</label>
+                                        <input name="bets" type="number" placeholder="請輸入賭本" required>
                                         <span class="helper">$ZKZ數量為 300</span>
                                     </div>
                                 </div>
@@ -358,9 +352,9 @@
         <div id="odds" class="popUp">
             <div class="popUp--container">
                 <button class="popUp--close"><i class="icon-Close"></i></button>
-                <h3>Odds information</h3>
+                <h3>小提醒</h3>
                 <div class="popUp--content">
-                    <p>This odds already include a 3% House Edge.</p>
+                    <p class="text-center">此賠率已包含3%莊家優勢。</p>
                 </div>
                 <!-- <div class="popUp--btns">
                     <button class="btn-tertiary close">取消</button>
@@ -395,12 +389,21 @@
     <script src="js/popUp.js"></script>
     <script src="js/connect-wallet.js"></script>
     <script src="js/game.js"></script>
-    <script src="js/match-the-pirate.js"></script>
+    <script src="js/IC.js"></script>
 
     <!-- Swiper 套件 -->
     <script src="vendor/swiper/swiper-bundle.min.js"></script>
     <script>
-        var swiper = new Swiper(".award-list", {
+        var swiperSlot = new Swiper(".result .swiper", {
+            direction: "vertical",
+            loop: true,
+            autoplay: {
+                delay: 1000,
+                disableOnInteraction: false,
+            },
+        });
+
+        var swiperAward = new Swiper(".award-list", {
             direction: "vertical",
             slidesPerView: 3,
             slidesPerGroup: 1,
