--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
 					<button class="menu"></button>
 					<div class="nav">
 						<ul>
-							<li for="shop"><a href="javascript:void()">商城</a></li>
 							<li for="game"><a href="javascript:void()">Game</a></li>
 							<li for="nft-idx"><a href="javascript:void()">NFT</a></li>
 							<li for="tutorial"><a href="javascript:void()">教學</a></li>
@@ -186,133 +185,61 @@
 					</div>
 					<div class="container">
 						<div class="desc">
-							<p class="title-xl">Game</p>
-							<p class="body-1">Description description description description description.</p>
-							<button class="btn-secondary" onclick="location='game.html'">View All Games</button>
+							<p class="title-xl">精選遊戲</p>
+							<p class="body-1">拿出望遠鏡，探索最新上架的矚目遊戲！</p>
+							<a class="button btn-secondary" href="game.html">查看全部遊戲</a>
 						</div>
 						<div class="carousel dark">
 							<div class="swiper">
 								<div class="swiper-wrapper">
-									<div class="swiper-slide" onclick="location='match-the-pirate.html'">
-										<img src="img/game/match-the-pirate/thumb.jpg">
+									<div class="swiper-slide" onclick="location='MTP.html'">
+										<img src="img/game/MTP/thumb.jpg">
 										<div class="hover">
-											<h4>Match the Pirate</h4>
+											<h4>默契海盜</h4>
 											<ul class="tags">
-												<li>Role</li>
-												<li>Card</li>
-												<li>&lt; 3 minutes</li>
+												<li>角色</li>
+												<li>卡牌</li>
+												<li>&lt;3分鐘</li>
 											</ul>
-											<button class="btn-tertiary">View Details</button>
+											<button class="btn-tertiary">查看遊戲介紹</button>
 										</div>
 									</div>
-									<div class="swiper-slide" onclick="location='paper-scissors-stone.html'">
-										<img src="img/game/paper-scissors-stone/thumb.jpg">
+									<div class="swiper-slide" onclick="location='PSS.html'">
+										<img src="img/game/PSS/thumb.jpg">
 										<div class="hover">
-											<h4>Paper, Scissors, Stone</h4>
+											<h4>剪刀石頭布</h4>
 											<ul class="tags">
-												<li>Fantasy</li>
-												<li>Relaxing</li>
-												<li>&lt; 3 minutes</li>
+												<li>科幻</li>
+												<li>休閒</li>
+												<li>&lt;3分鐘</li>
 											</ul>
-											<button class="btn-tertiary">Coming Soon</button>
+											<button class="btn-tertiary">查看遊戲介紹</button>
 										</div>
 									</div>
-									<div class="swiper-slide" onclick="location='interstellar-connection.html'">
-										<img src="img/game/interstellar-connection/thumb.jpg">
+									<div class="swiper-slide" onclick="location='IC.html'">
+										<img src="img/game/IC/thumb.jpg">
 										<div class="hover">
-											<h4>Interstellar Connection</h4>
+											<h4>星際連線</h4>
 											<ul class="tags">
-												<li>fortune</li>
-												<li>slot machine</li>
-												<li>&lt; 3 minutes</li>
+												<li>科幻</li>
+												<li>休閒</li>
+												<li>&lt;3分鐘</li>
 											</ul>
-											<button class="btn-tertiary">Coming Soon</button>
+											<button class="btn-tertiary">查看遊戲介紹</button>
 										</div>
 									</div>
-									<div class="swiper-slide" onclick="location='mysterious-compass.html'">
-										<img src="img/game/mysterious-compass/thumb.jpg">
+									<div class="swiper-slide" onclick="location='MC.html'">
+										<img src="img/game/MC/thumb.jpg">
 										<div class="hover">
-											<h4>Mysterious Compass</h4>
+											<h4>神秘輪盤</h4>
 											<ul class="tags">
-												<li>Pirate</li>
-												<li>Destiny</li>
-												<li>&lt; 3 minutes</li>
+												<li>海盜</li>
+												<li>命運</li>
+												<li>&lt;3分鐘</li>
 											</ul>
-											<button class="btn-tertiary">Coming Soon</button>
+											<button class="btn-tertiary">查看遊戲介紹</button>
 										</div>
 									</div>
-									<!-- <div class="swiper-slide" onclick="location='bet-big-small.html'">
-										<img src="img/game/bet-big-small/thumb.jpg">
-										<div class="hover">
-											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-											<ul class="tags">
-												<li>tag</li>
-												<li>tag</li>
-												<li>tag</li>
-											</ul>
-											<button class="btn-tertiary">View Details</button>
-										</div>
-									</div>
-									<div class="swiper-slide" onclick="location='odd-even-betting.html'">
-										<img src="img/game/odd-even-betting/thumb.jpg">
-										<div class="hover">
-											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-											<ul class="tags">
-												<li>tag</li>
-												<li>tag</li>
-												<li>tag</li>
-											</ul>
-											<button class="btn-tertiary">View Details</button>
-										</div>
-									</div>
-									<div class="swiper-slide" onclick="location='higher-number-wins.html'">
-										<img src="img/game/higher-number-wins/thumb.jpg">
-										<div class="hover">
-											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-											<ul class="tags">
-												<li>tag</li>
-												<li>tag</li>
-												<li>tag</li>
-											</ul>
-											<button class="btn-tertiary">View Details</button>
-										</div>
-									</div>
-									<div class="swiper-slide" onclick="location='coin-matching.html'">
-										<img src="img/game/coin-matching/thumb.jpg">
-										<div class="hover">
-											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-											<ul class="tags">
-												<li>tag</li>
-												<li>tag</li>
-												<li>tag</li>
-											</ul>
-											<button class="btn-tertiary">View Details</button>
-										</div>
-									</div>
-									<div class="swiper-slide" onclick="location='red-vs-black.html'">
-										<img src="img/game/red-vs-black/thumb.jpg">
-										<div class="hover">
-											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-											<ul class="tags">
-												<li>tag</li>
-												<li>tag</li>
-												<li>tag</li>
-											</ul>
-											<button class="btn-tertiary">View Details</button>
-										</div>
-									</div>
-									<div class="swiper-slide" onclick="location='spin-the-wheel.html'">
-										<img src="img/game/spin-the-wheel/thumb.jpg">
-										<div class="hover">
-											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-											<ul class="tags">
-												<li>tag</li>
-												<li>tag</li>
-												<li>tag</li>
-											</ul>
-											<button class="btn-tertiary">View Details</button>
-										</div>
-									</div> -->
 								</div>
 							</div>
 							<div class="swiper-button-prev"></div>
@@ -389,10 +316,8 @@
 				<section id="tutorial">
 					<div class="container">
 						<div class="title">
-							<p class="title-xl">教學</p>
-							<p class="body-1">
-								Description description description description description description description.
-							</p>
+							<p class="title-xl">平台使用教學</p>
+							<p class="body-1">連接錢包、累積$ZKZ，與我們一同打造充滿驚奇的海盜冒險時代！</p>
 						</div>
 						<div class="content">
 							<div class="mask"></div>
@@ -409,14 +334,6 @@
 									<h5>3</h5>
 									<h4>Step 3</h4>
 								</li>
-								<!-- <li>
-									<h5>4</h5>
-									<h4>Step 4</h4>
-								</li>
-								<li>
-									<h5>5</h5>
-									<h4>Step 5</h4>
-								</li> -->
 							</ul>
 							<ul class="tab-content">
 								<li class="active">
@@ -437,35 +354,10 @@
 									<div>
 										<img src="img/coin.gif">
 										<h2>累積$ZKZ迎接未來</h2>
-										<p>未來我們將開放使用$ZKZ升級dNFT，以此為依據進行來自開發者份額的$ZKS空投。空投份額規劃詳情請見此處。</p>
-										<button id="go-zkz">立刻查看</button>
+										<p>未來我們將開放使用$ZKZ升級dNFT，以此為依據進行DAO的成果共享。空投份額規劃詳情請見此處。</p>
+										<button id="go-zkz">立即查看</button>
 									</div>
 								</li>
-								<!-- <li>
-										<div>
-											<h2>Upgrade ZKaizoku License to gain additional multiplier effects</h2>
-											<p>
-												Utilize your accumulated $ZKZ to upgrade ZKaizoku License to make the total
-												amount of your $ZKZ increased through the additional multiplier effects from
-												your ZKaizoku License upgraded.
-											</p>
-										</div>
-									</li>
-									<li>
-										<div>
-											<h2>Settle the zkSync Era airdrop allocation</h2>
-											<p>
-												The result of multiplying your $ZKZ and ZKaizoku License will be divided by
-												the
-												total sum of $ZKZ held by all participants, determining your share on
-												ZKaizoku
-												platform.After zkSync Era official airdrop, we will send you your portion of
-												TOKEN from the allocation designated for developers. <br>
-												For detailed information of airdrop allocation of ZKaizoku, please refer to
-												here.
-											</p>
-										</div>
-									</li> -->
 							</ul>
 						</div>
 					</div>
@@ -477,10 +369,6 @@
 							<source src="img/bg/zkz-bg.mp4" type="video/mp4">
 							<source src="img/bg/zkz-bg.webm" type="video/webm">
 						</video>
-						<!-- <video class="bg-mobile" autoplay muted loop poster="img/bg/zkz-bg-m.jpg">
-							<source src="img/bg/zkz-bg-m.mp4" type="video/mp4">
-							<source src="img/bg/zkz-bg-m.webm" type="video/webm">
-						</video> -->
 					</div>
 					<div class="container">
 						<img src="img/PieChart.png">
@@ -492,16 +380,6 @@
 
 			<footer>
 				<div class="mask"></div>
-				<!-- <ul class="sns">
-					<li>
-						<button class="btn-rounded" onclick="window.open('https://twitter.com/ZKaizoku_')">
-							<i class="icon-Twitter"></i>
-						</button>
-					</li>
-					<li>
-						<button class="btn-rounded"><i class="icon-Telegram"></i></button>
-					</li>
-				</ul> -->
 			</footer>
 
 
@@ -539,7 +417,7 @@
 					<button class="popUp--close"><i class="icon-Close"></i></button>
 					<h3>簽到成功，$ZKZ領取完成!</h3>
 					<div class="popUp--content">
-						<p class="text-center">24小時後可以再次領取</p>
+						<p class="text-center">恭喜你，已完成本次$ZKZ領取</p>
 					</div>
 					<div class="popUp--btns">
 						<!-- <button class="btn-tertiary close">取消</button> -->
