--- a/personal.html
+++ b/personal.html
@@ -71,7 +71,6 @@
                 <button class="menu"></button>
                 <div class="nav">
                     <ul>
-                        <li><a href="shop.html">商城</a></li>
                         <li><a href="game.html">Game</a></li>
                         <li><a href="index.html#nft-idx">NFT</a></li>
                         <li><a href="index.html#tutorial">教學</a></li>
@@ -289,23 +288,10 @@
                             <h3>歷史紀錄</h3>
                             <ul class="tab">
                                 <li class="active">提領紀錄</li>
-                                <li>交易紀錄</li>
+                                <li>購買紀錄</li>
                             </ul>
 
                             <div class="filter">
-                                <!-- <div class="days">
-                                    <span>篩選</span>
-                                    <div class="dropdown">
-                                        <button>30天</button>
-                                        <div class="dropdown-content">
-                                            <ul>
-                                                <li class="active"><a href="javascript:void()">30天</a></li>
-                                                <li><a href="javascript:void()">3個月</a></li>
-                                                <li><a href="javascript:void()">6個月</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div> -->
                                 <div class="pages">
                                     <span>頁數</span>
                                     <div class="dropdown">
@@ -335,7 +321,7 @@
                                                 <th>訂單編號</th>
                                                 <th>提領金額</th>
                                                 <th>狀態</th>
-                                                <th>鏈上資訊</th>
+                                                <th>鏈上數據</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -490,17 +476,6 @@
 
         <footer>
             <div class="mask"></div>
-            <!-- <img class="popUp--open" for="mission" src="img/daily-mission.png"> -->
-            <!-- <ul class="sns">
-                <li>
-                    <button class="btn-rounded" onclick="window.open('https://twitter.com/ZKaizoku_')">
-                        <i class="icon-Twitter"></i>
-                    </button>
-                </li>
-                <li>
-                    <button class="btn-rounded"><i class="icon-Telegram"></i></button>
-                </li>
-            </ul> -->
         </footer>
 
 
@@ -582,7 +557,7 @@
                                 <input name="price" type="text" value="100">
                                 <label>/<span>3,000,000</span></label>
                             </div> -->
-                            <span class="helper">待領取$ZKZ數量為 300</span>
+                            <span class="helper">本次可提領上限 300</span>
                         </div>
                         <div class="input-wrap">
                             <label for="address">收款錢包</label>
