--- a/MC.html
+++ b/MC.html
@@ -68,7 +68,6 @@
                 <button class="menu"></button>
                 <div class="nav">
                     <ul>
-                        <li><a href="shop.html">商城</a></li>
                         <li><a href="game.html">Game</a></li>
                         <li><a href="index.html#nft-idx">NFT</a></li>
                         <li><a href="index.html#tutorial">教學</a></li>
@@ -135,71 +134,52 @@
             <ul class="breadcrumb">
                 <li><a href="index.html">首頁</a></li>
                 <li><a href="game.html">Game</a></li>
-                <li>Interstellar Connection</li>
+                <li>神秘輪盤</li>
             </ul>
 
             <section id="game">
                 <div class="container">
                     <div class="game-detail card">
                         <div class="card-content">
-                            <div class="game-zone interstellar-connection">
-                                <div class="default"
-                                    style="background-image: url(img/game/interstellar-connection/cover.jpg);">
+                            <div class="game-zone MC">
+                                <div class="default" style="background-image: url(img/game/MC/cover.jpg);">
                                     <div class="game-title">
-                                        <h3>Interstellar Connection</h3>
+                                        <h3>神秘輪盤</h3>
                                         <!-- ↓若還沒連結錢包則先跳出連結錢包的彈窗 -->
-                                        <button>Start to play</button>
+                                        <button>開始遊玩</button>
                                     </div>
                                 </div>
 
                                 <div class="play-game">
-                                    <video autoplay muted loop poster="img/game/interstellar-connection/bg.jpg">
-                                        <!-- <source src="img/game/interstellar-connection/bg.mp4" type="video/mp4"> -->
+                                    <video autoplay muted loop poster="img/game/MC/bg.jpg">
+                                        <source src="img/game/MC/bg.mp4" type="video/mp4">
                                     </video>
                                     <div class="game-content">
                                         <div class="result">
-                                            <div class="swiper">
-                                                <div class="swiper-wrapper">
-                                                    <div class="swiper-slide">
-                                                        <img src="img/game/interstellar-connection/star.png">
-                                                    </div>
-                                                    <div class="swiper-slide">
-                                                        <img src="img/game/interstellar-connection/coin.png">
-                                                    </div>
-                                                    <div class="swiper-slide">
-                                                        <img src="img/game/interstellar-connection/crown.png">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="swiper">
-                                                <div class="swiper-wrapper">
-                                                    <div class="swiper-slide">
-                                                        <img src="img/game/interstellar-connection/coin.png">
-                                                    </div>
-                                                    <div class="swiper-slide">
-                                                        <img src="img/game/interstellar-connection/crown.png">
-                                                    </div>
-                                                    <div class="swiper-slide">
-                                                        <img src="img/game/interstellar-connection/star.png">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="swiper">
-                                                <div class="swiper-wrapper">
-                                                    <div class="swiper-slide">
-                                                        <img src="img/game/interstellar-connection/crown.png">
-                                                    </div>
-                                                    <div class="swiper-slide">
-                                                        <img src="img/game/interstellar-connection/star.png">
-                                                    </div>
-                                                    <div class="swiper-slide">
-                                                        <img src="img/game/interstellar-connection/coin.png">
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            <img src="img/game/MC/stone.png">
                                         </div>
 
                                         <div class="selection">
+                                            <div>
+                                                <input id="item01" type="radio" name="item" value="item01">
+                                                <label for="item01">
+                                                    <img class="bg" src="img/game/btn-bg.png">
+                                                    <img class="item" src="img/game/MC/scissors-s.png">
+                                                </label>
+
+                                                <input id="item02" type="radio" name="item" value="item02">
+                                                <label for="item02">
+                                                    <img class="bg" src="img/game/btn-bg.png">
+                                                    <img class="item" src="img/game/MC/stone-s.png">
+                                                </label>
+
+                                                <input id="item03" type="radio" name="item" value="item03">
+                                                <label for="item03">
+                                                    <img class="bg" src="img/game/btn-bg.png">
+                                                    <img class="item" src="img/game/MC/paper-s.png">
+                                                </label>
+                                            </div>
+
                                             <button class="play"><img src="img/game/btn-play.png"></button>
                                         </div>
                                     </div>
@@ -242,14 +222,10 @@
                             </div>
 
                             <div class="content">
-                                <h3>Interstellar Connection</h3>
+                                <h3>神秘輪盤</h3>
                                 <div class="desc">
                                     <p>
-                                        This is a probability game involving dice rolling. Should the number on your
-                                        rolled dice match that of the computer's, you will be able to receive the reward
-                                        amount, which is the result of multiplying your wager by the payout odds.
-                                        Conversely, if the number on your rolled dice differs from that of the
-                                        computer's, the system shall seize your wager.
+                                        這是一款猜測海上輪盤指向何種元素的遊戲。若你猜對，你將獲得賭本乘上賠率的獎勵金額；如果你猜錯，系統將沒收你的賭本。
                                     </p>
                                 </div>
                                 <div class="awards">
@@ -267,14 +243,14 @@
                                 <div class="odd-n-bet">
                                     <div class="odds">
                                         <label>
-                                            Odds
+                                            賠率
                                             <i class="icon-InfoCircle popUp--open" for="odds"></i>
                                         </label>
                                         <h3>xN.NN</h3>
                                     </div>
                                     <div class="bets">
-                                        <label for="bets">Bets</label>
-                                        <input name="bets" type="number" placeholder="Enter your Bets" required>
+                                        <label for="bets">賭本</label>
+                                        <input name="bets" type="number" placeholder="請輸入賭本" required>
                                         <span class="helper">$ZKZ數量為 300</span>
                                     </div>
                                 </div>
@@ -358,9 +334,9 @@
         <div id="odds" class="popUp">
             <div class="popUp--container">
                 <button class="popUp--close"><i class="icon-Close"></i></button>
-                <h3>Odds information</h3>
+                <h3>小提醒</h3>
                 <div class="popUp--content">
-                    <p>This odds already include a 3% House Edge.</p>
+                    <p class="text-center">此賠率已包含3%莊家優勢。</p>
                 </div>
                 <!-- <div class="popUp--btns">
                     <button class="btn-tertiary close">取消</button>
@@ -395,21 +371,12 @@
     <script src="js/popUp.js"></script>
     <script src="js/connect-wallet.js"></script>
     <script src="js/game.js"></script>
-    <script src="js/interstellar-connection.js"></script>
+    <script src="js/MC.js"></script>
 
     <!-- Swiper 套件 -->
     <script src="vendor/swiper/swiper-bundle.min.js"></script>
     <script>
-        var swiperSlot = new Swiper(".result .swiper", {
-            direction: "vertical",
-            loop: true,
-            autoplay: {
-                delay: 1000,
-                disableOnInteraction: false,
-            },
-        });
-
-        var swiperAward = new Swiper(".award-list", {
+        var swiper = new Swiper(".award-list", {
             direction: "vertical",
             slidesPerView: 3,
             slidesPerGroup: 1,
