--- a/game.html
+++ b/game.html
@@ -65,7 +65,6 @@
                 <button class="menu"></button>
                 <div class="nav">
                     <ul>
-                        <li><a href="shop.html">商城</a></li>
                         <li><a href="game.html">Game</a></li>
                         <li><a href="index.html#nft-idx">NFT</a></li>
                         <li><a href="index.html#tutorial">教學</a></li>
@@ -139,145 +138,61 @@
                     <h3>Game</h3>
                     <ul class="game-list">
                         <li>
-                            <a href="match-the-pirate.html">
+                            <a href="MTP.html">
                                 <div class="img">
-                                    <img src="img/game/match-the-pirate/thumb.jpg">
+                                    <img src="img/game/MTP/thumb.jpg">
                                 </div>
-                                <h4>Match the Pirate</h4>
+                                <h4>默契海盜</h4>
                                 <ul class="tags">
-                                    <li>Role</li>
-                                    <li>Card</li>
-                                    <li>&lt; 3 minutes</li>
+                                    <li>角色</li>
+                                    <li>卡牌</li>
+                                    <li>&lt;3分鐘</li>
                                 </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                                <div class="btn"><button class="btn-tertiary">查看遊戲介紹</button></div>
                             </a>
                         </li>
                         <li>
-                            <a href="paper-scissors-stone.html">
+                            <a href="PSS.html">
                                 <div class="img">
-                                    <img src="img/game/paper-scissors-stone/thumb.jpg">
+                                    <img src="img/game/PSS/thumb.jpg">
                                 </div>
-                                <h4>Paper, Scissors, Stone</h4>
+                                <h4>剪刀石頭布</h4>
                                 <ul class="tags">
-                                    <li>Fantasy</li>
-                                    <li>Relaxing</li>
-                                    <li>&lt; 3 minutes</li>
+                                    <li>科幻</li>
+                                    <li>休閒</li>
+                                    <li>&lt;3分鐘</li>
                                 </ul>
-                                <div class="btn"><button class="btn-tertiary">Coming Soon</button></div>
+                                <div class="btn"><button class="btn-tertiary">查看遊戲介紹</button></div>
                             </a>
                         </li>
                         <li>
-                            <a href="interstellar-connection.html">
+                            <a href="IC.html">
                                 <div class="img">
-                                    <img src="img/game/interstellar-connection/thumb.jpg">
+                                    <img src="img/game/IC/thumb.jpg">
                                 </div>
-                                <h4>Interstellar Connection</h4>
+                                <h4>星際連線</h4>
                                 <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>slot machine</li>
-                                    <li>&lt; 3 minutes</li>
+                                    <li>科幻</li>
+                                    <li>休閒</li>
+                                    <li>&lt;3分鐘</li>
                                 </ul>
-                                <div class="btn"><button class="btn-tertiary">Coming Soon</button></div>
+                                <div class="btn"><button class="btn-tertiary">查看遊戲介紹</button></div>
                             </a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">
+                            <a href="MC.html">
                                 <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
+                                    <img src="img/game/MC/thumb.jpg">
                                 </div>
-                                <h4>Mysterious Compass</h4>
+                                <h4>神秘輪盤</h4>
                                 <ul class="tags">
-                                    <li>Pirate</li>
-                                    <li>Destiny</li>
-                                    <li>&lt; 3 minutes</li>
+                                    <li>海盜</li>
+                                    <li>命運</li>
+                                    <li>&lt;3分鐘</li>
                                 </ul>
-                                <div class="btn"><button class="btn-tertiary">Coming Soon</button></div>
+                                <div class="btn"><button class="btn-tertiary">查看遊戲介紹</button></div>
                             </a>
                         </li>
-                        <!-- <li>
-                            <a href="bet-big-small.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Bet Big/Small</h4>
-                                <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>dice</li>
-                                    <li>&lt; 3 minutes</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="odd-even-betting.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Odd/Even Betting</h4>
-                                <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>dice</li>
-                                    <li>&lt; 3 minutes</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="higher-number-wins.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Higher number wins</h4>
-                                <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>dice</li>
-                                    <li>&lt; 3 minutes</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="coin-matching.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Coin Matching</h4>
-                                <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>coin</li>
-                                    <li>&lt; 3 minutes</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="red-vs-black.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Red vs. Black</h4>
-                                <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>roulette</li>
-                                    <li>&lt; 3 minutes</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="spin-the-wheel.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Spin the Wheel</h4>
-                                <ul class="tags">
-                                    <li>fortune</li>
-                                    <li>roulette</li>
-                                    <li>&lt; 3 minutes</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li> -->
                     </ul>
                 </div>
             </section>
@@ -285,17 +200,6 @@
 
         <footer>
             <div class="mask"></div>
-            <!-- <img class="popUp--open" for="mission" src="img/daily-mission.png"> -->
-            <!-- <ul class="sns">
-                <li>
-                    <button class="btn-rounded" onclick="window.open('https://twitter.com/ZKaizoku_')">
-                        <i class="icon-Twitter"></i>
-                    </button>
-                </li>
-                <li>
-                    <button class="btn-rounded"><i class="icon-Telegram"></i></button>
-                </li>
-            </ul> -->
         </footer>
 
 
